- util/memmove.S: Improve memcpy() speed for small lengths. (RFB)
- bdos/fs.h bdos/fsopnclo.c: Remove some duplicate #defines. (RFB)

2013-03-08
- bios/blkdev.c bios/blkdev.h: Static cleanup. (RFB)

2013-03-09
- cli/command.c: Fix occasional crash in CLI rename command. (RFB)
- include/config.h aes/gemdisof.S aes/gemsuper.c aes/struct.h: Added
  CONF_DEBUG_AES_STACK to debug and estimate the AES stack usage. (VRI)
- aes/struct.h: Increased STACK_SIZE to allow running XaAES with GEM=ROM. (VRI)
- desk/deskmain.c desk/desksupp.c desk/desktop.def desk/desktop.rsc:
  Remove unnecessary info dialog for "New folder" (present in all ROMs
  but only used in 192K). (RFB)

2013-03-11
- aes/geminit.c: Fix divide-by-zero when ev_dclick() is called before
  gl_ticktime is initialised. (RFB)

2013-03-12
- bios/dmasound.c: Added remaining Soundcmd() functionality for Falcon. (THH)
- bios/bios.c: Panic instead of endless loop on zero divide on ColdFire. (VRI)
- include/asm.h: Safe set_sr() for ColdFire. Reported by Markus Fröschle. (VRI)
- *.S: Replaced dc.b by .dc.b and so on. This makes the pseudo-ops more visible
  and fixes compilation with buggy m68k-elf toolchain with -g. (VRI)
- bios/xhdi.c: Uncomment XHMiNTInfo and add it to the XHDI handler. Contributed
  by David Gálvez. (VRI)
- bdos/fsdir.c include/gemerror.h: Allow Frename() to rename folders. (RFB)

2013-03-13
- bdos/fsdir.c: Removed non-TOS extension to Dsetpath(). (RFB)
- aes/gemshlib.c: Small code optimisation. (RFB)
- aes/gemqueue.c aes/gemwmlib.c desk/deskapp.c desk/deskfpd.c
  desk/deskins.c desk/deskobj.c desk/deskwin.c include/compat.h: Replace
  movs() macro with memcpy(). (RFB)
- aes/optimize.c aes/optimize.h desk/deskinf.c: Eliminate inf_fldset()
  function to save space & clarify code. (RFB)

2013-03-14
- desk/deskinf.c: Code cleanup: save some stack & code space. (RFB)
- desk/deskmain.c desk/deskstart.S include/config.h: Added
  CONF_DEBUG_DESK_STACK to debug and estimate desktop stack usage. (RFB)